# N-Agent

./: .gitignore  CLAUDE.md  Dockerfile  MEMORY_LEAK_FIXES.md  README.md  docker-compose.v4-test.yml  package-lock.json  pyproject.toml  quick_api_test.sh  requirements-core.txt  requirements.txt
.claude/skills/: README.md
agent_core/: __init__.py  __main__.py  agent.py  background_task_manager.py  config.py  llm_data_budget.py  llm_endpoints.json  prompt_builder.py  sandbox.py  skill_discovery.py  skill_executor.py  skill_metadata_provider.py  skill_output.py  skill_output_adapter.py  skill_qualifier.py  tool_execution_tracker.py
agent_core/agentloop/: __init__.py  agentic_loop.json  capability_gap_counter.py  context_builder.py  context_compactor.py  hook_engine.py  llm_provider.py  loop.py  message_types.py  output_validator.py  parallel_executor.py  permission_guard.py  session_engine.py  skill_invoker.py  stream_adapter.py  subagent.py  tool_result_summarizer.py
agent_core/config/: performance.json  session_compact.json
agent_core/knowledge/: __init__.py  benchmark.py  config_loader.py  distiller.py  dream_consolidator.py  episode_tracker.py  evolution_task.py  feedback_learner.py  graph_distiller.py  graph_retriever.py  graph_store.py  guard.py  knowledge_engine.json  learn_evaluator.py  models.py  prediction_extractor.py  prediction_scheduler.py  prediction_store.py  prediction_verifier.py  reflection.py  retriever.py  skill_crystallizer.py  skill_evolver.py  source_registry.py  store.py  strategy_learner.py  temporal.py
app/: config.py  main.py
(+367 files in other folders)
